<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2025  Gaurav Ujjwal.
  ~
  ~ SPDX-License-Identifier:  GPL-3.0-or-later
  ~
  ~ See COPYING.txt for more details.
  -->
<!--
  Managed configuration schema for EMM/MDM solutions (Intune, WizyEMM,
  Workspace ONE, ...).

  Each restriction maps 1:1 onto an existing AVNC preference key.
  The android:defaultValue values must match the AVNC defaults so that
  an EMM which does not push a value still behaves as expected.
-->
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

    <restriction
        android:key="screen_orientation"
        android:title="@string/restriction_screen_orientation_title"
        android:description="@string/restriction_screen_orientation_desc"
        android:restrictionType="choice"
        android:defaultValue="auto"
        android:entries="@array/orientation_entries"
        android:entryValues="@array/orientation_values" />

    <restriction
        android:key="scroll_mode"
        android:title="@string/restriction_scroll_mode_title"
        android:description="@string/restriction_scroll_mode_desc"
        android:restrictionType="choice"
        android:defaultValue="touchscreen"
        android:entries="@array/gesture_style_entries"
        android:entryValues="@array/gesture_style_values" />

    <restriction
        android:key="scroll_sensitivity"
        android:title="@string/restriction_scroll_sensitivity_title"
        android:description="@string/restriction_scroll_sensitivity_desc"
        android:restrictionType="integer"
        android:defaultValue="10" />

    <restriction
        android:key="tap2_action"
        android:title="@string/restriction_tap2_action_title"
        android:description="@string/restriction_tap2_action_desc"
        android:restrictionType="choice"
        android:defaultValue="open-keyboard"
        android:entries="@array/tap2_action_entries"
        android:entryValues="@array/tap2_action_values" />

    <restriction
        android:key="swipe1_action"
        android:title="@string/restriction_swipe1_action_title"
        android:description="@string/restriction_swipe1_action_desc"
        android:restrictionType="choice"
        android:defaultValue="pan"
        android:entries="@array/swipe1_action_entries"
        android:entryValues="@array/swipe1_action_values" />

    <restriction
        android:key="swipe2_action"
        android:title="@string/restriction_swipe2_action_title"
        android:description="@string/restriction_swipe2_action_desc"
        android:restrictionType="choice"
        android:defaultValue="pan"
        android:entries="@array/swipe2_action_entries"
        android:entryValues="@array/swipe2_action_values" />

    <restriction
        android:key="keep_screen_on"
        android:title="@string/restriction_keep_screen_on_title"
        android:description="@string/restriction_keep_screen_on_desc"
        android:restrictionType="bool"
        android:defaultValue="true" />

    <restriction
        android:key="fullscreen_display"
        android:title="@string/restriction_fullscreen_display_title"
        android:description="@string/restriction_fullscreen_display_desc"
        android:restrictionType="bool"
        android:defaultValue="true" />

    <restriction
        android:key="auto_reconnect"
        android:title="@string/restriction_auto_reconnect_title"
        android:description="@string/restriction_auto_reconnect_desc"
        android:restrictionType="bool"
        android:defaultValue="false" />

    <restriction
        android:key="lock_saved_server"
        android:title="@string/restriction_lock_saved_server_title"
        android:description="@string/restriction_lock_saved_server_desc"
        android:restrictionType="bool"
        android:defaultValue="false" />

    <restriction
        android:key="lock_settings"
        android:title="@string/restriction_lock_settings_title"
        android:description="@string/restriction_lock_settings_desc"
        android:restrictionType="bool"
        android:defaultValue="false" />

    <restriction
        android:key="lock_servers"
        android:title="@string/restriction_lock_servers_title"
        android:description="@string/restriction_lock_servers_desc"
        android:restrictionType="bool"
        android:defaultValue="false" />

    <restriction
        android:key="managed_servers"
        android:title="@string/restriction_managed_servers_title"
        android:description="@string/restriction_managed_servers_desc"
        android:restrictionType="bundle_array">

        <restriction
            android:key="managed_server"
            android:restrictionType="bundle">

            <restriction android:key="id" android:restrictionType="string"
                android:title="@string/restriction_server_id_title"
                android:description="@string/restriction_server_id_desc" />
            <restriction android:key="name" android:restrictionType="string"
                android:title="@string/restriction_server_name_title"
                android:description="@string/restriction_server_name_desc" />
            <restriction android:key="host" android:restrictionType="string"
                android:title="@string/restriction_server_host_title"
                android:description="@string/restriction_server_host_desc" />
            <restriction android:key="port" android:restrictionType="integer"
                android:defaultValue="5900"
                android:title="@string/restriction_server_port_title"
                android:description="@string/restriction_server_port_desc" />
            <restriction android:key="security_type" android:restrictionType="choice"
                android:entries="@array/restriction_security_type_entries"
                android:entryValues="@array/restriction_security_type_values"
                android:defaultValue="0"
                android:title="@string/restriction_server_security_title"
                android:description="@string/restriction_server_security_desc" />
            <restriction android:key="channel_type" android:restrictionType="choice"
                android:entries="@array/restriction_channel_type_entries"
                android:entryValues="@array/restriction_channel_type_values"
                android:defaultValue="tcp"
                android:title="@string/restriction_server_channel_title"
                android:description="@string/restriction_server_channel_desc" />
            <restriction android:key="ssh_host" android:restrictionType="string"
                android:title="@string/restriction_server_ssh_host_title"
                android:description="@string/restriction_server_ssh_host_desc" />
            <restriction android:key="ssh_port" android:restrictionType="integer"
                android:defaultValue="22"
                android:title="@string/restriction_server_ssh_port_title"
                android:description="@string/restriction_server_ssh_port_desc" />
            <restriction android:key="ssh_username" android:restrictionType="string"
                android:title="@string/restriction_server_ssh_username_title"
                android:description="@string/restriction_server_ssh_username_desc" />
            <restriction android:key="ssh_auth_type" android:restrictionType="choice"
                android:entries="@array/restriction_ssh_auth_type_entries"
                android:entryValues="@array/restriction_ssh_auth_type_values"
                android:defaultValue="key"
                android:title="@string/restriction_server_ssh_auth_title"
                android:description="@string/restriction_server_ssh_auth_desc" />
            <restriction android:key="username" android:restrictionType="string"
                android:title="@string/restriction_server_username_title"
                android:description="@string/restriction_server_username_desc" />
            <restriction android:key="view_only" android:restrictionType="bool"
                android:defaultValue="false"
                android:title="@string/restriction_server_view_only_title"
                android:description="@string/restriction_server_view_only_desc" />

        </restriction>
    </restriction>

</restrictions>